Added my project

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Quickly send and receive CloseRoom messages from your computer."
     />
-    <link href="/messaging.png" rel="icon" type="image/png" />
+    <link href="/messaging.ico" rel="icon" type="image/png" />
     
     <title>CloseRoom</title>
   </head>
